cargo-features = ["workspace-inheritance"]

[package]
name = "modelfox_app"

authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = "UNLICENSED"
publish = false
repository = { workspace = true }
version = { workspace = true }

[lib]
path = "lib.rs"

[[bin]]
name = "modelfox_app_seed"
path = "seed.rs"

[features]
default = [
  "modelfox_app_alerts_index_server",
  "modelfox_app_alerts_server",
  "modelfox_app_edit_organization_server",
  "modelfox_app_health_server",
  "modelfox_app_index_server",
  "modelfox_app_login_server",
  "modelfox_app_model_download_server",
  "modelfox_app_model_edit_server",
  # "modelfox_app_model_index_client",
  "modelfox_app_model_index_server",
  "modelfox_app_monitors_edit_server",
  "modelfox_app_monitors_index_server",
  "modelfox_app_new_member_server",
  # "modelfox_app_new_model_client",
  "modelfox_app_new_model_server",
  # "modelfox_app_new_monitor_client",
  "modelfox_app_new_monitor_server",
  "modelfox_app_new_organization_server",
  "modelfox_app_new_repo_server",
  "modelfox_app_organization_index_server",
  "modelfox_app_organization_member_server",
  # "modelfox_app_playground_client",
  "modelfox_app_playground_server",
  # "modelfox_app_production_class_metrics_client",
  "modelfox_app_production_class_metrics_server",
  # "modelfox_app_production_metrics_index_client",
  "modelfox_app_production_metrics_index_server",
  # "modelfox_app_production_prediction_client",
  "modelfox_app_production_prediction_server",
  "modelfox_app_production_predictions_index_server",
  # "modelfox_app_production_stats_column_client",
  "modelfox_app_production_stats_column_server",
  # "modelfox_app_production_stats_index_client",
  "modelfox_app_production_stats_index_server",
  "modelfox_app_repo_edit_server",
  "modelfox_app_repo_index_server",
  "modelfox_app_track_server",
  # "modelfox_app_training_class_metrics_client",
  "modelfox_app_training_class_metrics_server",
  "modelfox_app_training_grid_index_server",
  "modelfox_app_training_grid_item_server",
  "modelfox_app_training_metrics_index_server",
  # "modelfox_app_training_metrics_precision_recall_client",
  "modelfox_app_training_metrics_precision_recall_server",
  # "modelfox_app_training_metrics_roc_client",
  "modelfox_app_training_metrics_roc_server",
  # "modelfox_app_training_stats_column_client",
  "modelfox_app_training_stats_column_server",
  "modelfox_app_training_stats_index_server",
  # "modelfox_app_tuning_client",
  "modelfox_app_tuning_server",
  "modelfox_app_user_server",
]

[build-dependencies]
anyhow = { workspace = true }
sunfish = { workspace = true }
modelfox_app_model_index_client = { path = "routes/repos/_/models/_/index/client", artifact = "bin", target = "wasm32-unknown-unknown" }
modelfox_app_new_model_client = { path = "routes/repos/_/models/new/client", artifact = "bin", target = "wasm32-unknown-unknown" }
modelfox_app_new_monitor_client = { path = "routes/repos/_/models/_/monitors/new/client", artifact = "bin", target = "wasm32-unknown-unknown" }
modelfox_app_playground_client = { path = "routes/repos/_/models/_/playground/client", artifact = "bin", target = "wasm32-unknown-unknown" }
modelfox_app_production_class_metrics_client = { path = "routes/repos/_/models/_/production_metrics/class_metrics/client", artifact = "bin", target = "wasm32-unknown-unknown" }
modelfox_app_production_metrics_index_client = { path = "routes/repos/_/models/_/production_metrics/index/client", artifact = "bin", target = "wasm32-unknown-unknown" }
modelfox_app_production_prediction_client = { path = "routes/repos/_/models/_/production_predictions/predictions/_/client", artifact = "bin", target = "wasm32-unknown-unknown" }
modelfox_app_production_stats_column_client = { path = "routes/repos/_/models/_/production_stats/columns/_/client", artifact = "bin", target = "wasm32-unknown-unknown" }
modelfox_app_production_stats_index_client = { path = "routes/repos/_/models/_/production_stats/index/client", artifact = "bin", target = "wasm32-unknown-unknown" }
modelfox_app_training_class_metrics_client = { path = "routes/repos/_/models/_/training_metrics/class_metrics/client", artifact = "bin", target = "wasm32-unknown-unknown" }
modelfox_app_training_metrics_precision_recall_client = { path = "routes/repos/_/models/_/training_metrics/precision_recall/client", artifact = "bin", target = "wasm32-unknown-unknown" }
modelfox_app_training_metrics_roc_client = { path = "routes/repos/_/models/_/training_metrics/roc/client", artifact = "bin", target = "wasm32-unknown-unknown" }
modelfox_app_training_stats_column_client = { path = "routes/repos/_/models/_/training_stats/columns/_/client", artifact = "bin", target = "wasm32-unknown-unknown" }
modelfox_app_tuning_client = { path = "routes/repos/_/models/_/tuning/client", artifact = "bin", target = "wasm32-unknown-unknown" }

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
glob = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
lettre = { workspace = true }
ndarray = { workspace = true }
num = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
sunfish = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

modelfox_charts = { workspace = true }
modelfox_core = { workspace = true }
modelfox_id = { workspace = true }
modelfox_metrics = { workspace = true }
modelfox_model = { workspace = true }
modelfox_serve = { workspace = true }
modelfox_table = { workspace = true }
modelfox_zip = { workspace = true }

modelfox_app_context = { path = "context" }
modelfox_app_core = { path = "core" }
modelfox_app_layouts = { path = "layouts" }
modelfox_app_migrations = { path = "migrations" }
modelfox_app_monitor_event = { path = "monitor_event" }

modelfox_app_alerts_server = { path = "routes/repos/_/models/_/alerts/_/server", optional = true }
modelfox_app_alerts_index_server = { path = "routes/repos/_/models/_/alerts/index/server", optional = true }
modelfox_app_edit_organization_server = { path = "routes/organizations/_/edit/server", optional = true }
modelfox_app_health_server = { path = "routes/health/server", optional = true }
modelfox_app_index_server = { path = "routes/index/server", optional = true }
modelfox_app_login_server = { path = "routes/login/server", optional = true }
modelfox_app_model_download_server = { path = "routes/repos/_/models/_/download/server", optional = true }
modelfox_app_model_edit_server = { path = "routes/repos/_/models/_/edit/server", optional = true }
modelfox_app_model_index_server = { path = "routes/repos/_/models/_/index/server", optional = true }
modelfox_app_monitors_edit_server = { path = "routes/repos/_/models/_/monitors/_/edit/server", optional = true }
modelfox_app_monitors_index_server = { path = "routes/repos/_/models/_/monitors/index/server", optional = true }
modelfox_app_new_member_server = { path = "routes/organizations/_/members/new/server", optional = true }
modelfox_app_new_model_server = { path = "routes/repos/_/models/new/server", optional = true }
modelfox_app_new_monitor_server = { path = "routes/repos/_/models/_/monitors/new/server", optional = true }
modelfox_app_new_organization_server = { path = "routes/organizations/new/server", optional = true }
modelfox_app_new_repo_server = { path = "routes/repos/new/server", optional = true }
modelfox_app_organization_index_server = { path = "routes/organizations/_/index/server", optional = true }
modelfox_app_organization_member_server = { path = "routes/organizations/_/members/_/server", optional = true }
modelfox_app_playground_server = { path = "routes/repos/_/models/_/playground/server", optional = true }
modelfox_app_production_class_metrics_server = { path = "routes/repos/_/models/_/production_metrics/class_metrics/server", optional = true }
modelfox_app_production_metrics_index_server = { path = "routes/repos/_/models/_/production_metrics/index/server", optional = true }
modelfox_app_production_prediction_server = { path = "routes/repos/_/models/_/production_predictions/predictions/_/server", optional = true }
modelfox_app_production_predictions_index_server = { path = "routes/repos/_/models/_/production_predictions/index/server", optional = true }
modelfox_app_production_stats_column_server = { path = "routes/repos/_/models/_/production_stats/columns/_/server", optional = true }
modelfox_app_production_stats_index_server = { path = "routes/repos/_/models/_/production_stats/index/server", optional = true }
modelfox_app_repo_edit_server = { path = "routes/repos/_/edit/server", optional = true }
modelfox_app_repo_index_server = { path = "routes/repos/_/index/server", optional = true }
modelfox_app_track_server = { path = "routes/track/server", optional = true }
modelfox_app_training_class_metrics_server = { path = "routes/repos/_/models/_/training_metrics/class_metrics/server", optional = true }
modelfox_app_training_grid_index_server = { path = "routes/repos/_/models/_/training_grid/index/server", optional = true }
modelfox_app_training_grid_item_server = { path = "routes/repos/_/models/_/training_grid/grid_item/_/server", optional = true }
modelfox_app_training_metrics_index_server = { path = "routes/repos/_/models/_/training_metrics/index/server", optional = true }
modelfox_app_training_metrics_precision_recall_server = { path = "routes/repos/_/models/_/training_metrics/precision_recall/server", optional = true }
modelfox_app_training_metrics_roc_server = { path = "routes/repos/_/models/_/training_metrics/roc/server", optional = true }
modelfox_app_training_stats_column_server = { path = "routes/repos/_/models/_/training_stats/columns/_/server", optional = true }
modelfox_app_training_stats_index_server = { path = "routes/repos/_/models/_/training_stats/index/server", optional = true }
modelfox_app_tuning_server = { path = "routes/repos/_/models/_/tuning/server", optional = true }
modelfox_app_user_server = { path = "routes/user/server", optional = true }
