[package]
edition = "2018"
license = "MIT"
name = "tangram_build_release"
publish = false
version = "0.0.0"

[[bin]]
name = "tangram_build_release"
path = "main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.0.0-beta.2", features = ["color"] }
digest = "0.9"
dirs = "3"
duct = "0.13"
flate2 = "1"
hex = "0.4"
indoc = "1"
md-5 = "0.9"
rayon = "1.5"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha-1 = "0.9"
sha2 = "0.9"
tangram_build = { path = "../build" }
tangram_error = { path = "../error" }
tar = "0.4"
url = { version = "2", features = ["serde"] }
which = "4"
