[package]
edition = "2021"
name = "modelfox_charts"
publish = false
version = "0.0.0"

[lib]
path = "lib.rs"

[dependencies]
futures = "0.3"
itertools = "0.10"
pinwheel = "0.2"
num = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
modelfox_number_formatter = { path = "../number_formatter" }
modelfox_finite = { path = "../finite" }
tracing = "0.1"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "CanvasRenderingContext2d",
  "Document",
  "DomRect",
  "Element",
  "IntersectionObserver",
  "MediaQueryList",
  "Node",
  "NodeList",
  "TextMetrics",
  "Touch",
  "TouchEvent",
  "TouchList",
  "Window",
]
