cargo-features = ["workspace-inheritance"]

[package]
name = "modelfox_charts"

authors = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = false
repository = { workspace = true }
version = { workspace = true }

[lib]
path = "lib.rs"

[dependencies]
futures = { workspace = true }
itertools = { workspace = true }
pinwheel = { workspace = true }
num = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
wasm-bindgen = { workspace = true, features = ["serde-serialize"] }

modelfox_number_formatter = { workspace = true }
modelfox_finite = { workspace = true }

[dependencies.web-sys]
version = "0.3"
features = [
  "CanvasRenderingContext2d",
  "Document",
  "DomRect",
  "Element",
  "IntersectionObserver",
  "MediaQueryList",
  "Node",
  "NodeList",
  "TextMetrics",
  "Touch",
  "TouchEvent",
  "TouchList",
  "Window",
]
