[package]
default-run = "tangram"
edition = "2021"
rust-version = "1.56"
license = "MIT"
name = "tangram_cli"
publish = false
version = "0.7.0"

[[bin]]
name = "tangram"
path = "main.rs"

[features]
default = ["train", "serve", "app"]
train = []
serve = ["bytes", "hyper", "tokio", "tangram_serve"]
app = ["tangram_app", "tangram_app/default"]

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
backtrace = "0.3"
bytes = { version = "1", optional = true }
clap = { version = "3.0.0-rc.7", features = ["derive"] }
colored = "2"
csv = "1"
dirs = "4"
either = "1"
hyper = { version = "0.14", optional = true }
itertools = "0.10"
num = "0.4"
once_cell = "1"
rayon = "1.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
tangram_app = { path = "../app", default-features = false, optional = true }
tangram_core = { path = "../core" }
tangram_id = { path = "../id" }
tangram_kill_chip = { path = "../kill_chip" }
tangram_license = { path = "../license" }
tangram_model = { path = "../model" }
tangram_progress_counter = { path = "../progress_counter" }
tangram_serve = { path = "../serve", optional = true }
tangram_table = { path = "../table" }
tangram_zip = { path = "../zip" }
tokio = { version = "1", optional = true }
tortoise = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = { version = "2", features = ["serde"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
  "consoleapi",
  "handleapi",
  "processenv",
  "winbase",
  "wincon",
] }

[dev-dependencies]
insta = "1"
pretty_assertions = "1"
