cargo-features = ["workspace-inheritance"]

[package]
name = "modelfox_cli"

default-run = "modelfox"
authors = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = true
repository = { workspace = true }
version = { workspace = true }

[[bin]]
name = "modelfox"
path = "main.rs"

[features]
default = ["train", "serve", "app"]
train = []
serve = ["bytes", "hyper", "modelfox_serve", "tokio"]
app = ["modelfox_app", "modelfox_app/default", "modelfox_app_core", "tokio"]

[dependencies]
anyhow = { workspace = true }
backtrace = { workspace = true }
bytes = { workspace = true, optional = true }
clap = { workspace = true }
colored = { workspace = true }
csv = { workspace = true }
dirs = { workspace = true }
either = { workspace = true }
hyper = { workspace = true, optional = true }
itertools = { workspace = true }
num = { workspace = true }
once_cell = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true, optional = true }
tortoise = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

modelfox_app_core = { workspace = true, optional = true }
modelfox_app = { workspace = true, default-features = false, optional = true }
modelfox_core = { workspace = true }
modelfox_id = { workspace = true }
modelfox_kill_chip = { workspace = true }
modelfox_license = { workspace = true }
modelfox_ctrlc = { workspace = true }
modelfox_model = { workspace = true }
modelfox_progress_counter = { workspace = true }
modelfox_serve = { workspace = true, optional = true }
modelfox_table = { workspace = true }
modelfox_zip = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
winapi = { workspace = true, features = ["consoleapi", "handleapi", "processenv", "winbase", "wincon"] }

[dev-dependencies]
insta = { workspace = true }
pretty_assertions = { workspace = true }
