[package]
default-run = "modelfox"
edition = "2021"
license = "MIT"
name = "modelfox_cli"
publish = false
version = "0.8.0"

[[bin]]
name = "modelfox"
path = "main.rs"

[features]
default = ["train", "serve", "app"]
train = []
serve = ["bytes", "hyper", "modelfox_serve", "tokio"]
app = ["modelfox_app", "modelfox_app/default", "modelfox_app_core", "tokio"]

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
backtrace = "0.3"
bytes = { version = "1", optional = true }
clap = { version = "3", features = ["derive"] }
colored = "2"
csv = "1"
dirs = "4"
either = "1"
hyper = { version = "0.14", optional = true }
itertools = "0.10"
num = "0.4"
once_cell = "1"
rayon = "1.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
modelfox_app_core = { path = "../app/core", optional = true }
modelfox_app = { path = "../app", default-features = false, optional = true }
modelfox_core = { path = "../core" }
modelfox_id = { path = "../id" }
modelfox_kill_chip = { path = "../kill_chip" }
modelfox_license = { path = "../license" }
modelfox_model = { path = "../model" }
modelfox_progress_counter = { path = "../progress_counter" }
modelfox_serve = { path = "../serve", optional = true }
modelfox_table = { path = "../table" }
modelfox_zip = { path = "../zip" }
tokio = { version = "1", optional = true }
tortoise = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = { version = "2", features = ["serde"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
  "consoleapi",
  "handleapi",
  "processenv",
  "winbase",
  "wincon",
] }

[dev-dependencies]
insta = "1"
pretty_assertions = "1"
