[package]
authors = ["Tangram <root@tangram.dev"]
description = "Tangram makes it easy for programmers to train, deploy, and monitor machine learning models."
documentation = "https://docs.rs/tangram"
edition = "2021"
rust-version = "1.56"
homepage = "https://github.com/tangramdotdev/tangram"
license = "MIT"
name = "tangram_core"
publish = true
repository = "https://github.com/tangramdotdev/tangram"
version = "0.7.0"

[lib]
path = "lib.rs"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
bitvec = "1"
buffalo = { version = "0.3", features = ["bitvec", "ndarray_0_15"] }
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
fast-float = "0.2"
fnv = "1"
indexmap = { version = "1.6", features = ["serde-1"] }
itertools = "0.10"
ndarray = { version = "0.15", features = ["rayon"] }
num = "0.4"
rand = "0.8"
rand_xoshiro = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
tangram_features = { version = "0.7.0", path = "../features" }
tangram_finite = { version = "0.7.0", path = "../finite" }
tangram_id = { version = "0.7.0", path = "../id" }
tangram_kill_chip = { version = "0.7.0", path = "../kill_chip" }
tangram_linear = { version = "0.7.0", path = "../linear" }
tangram_metrics = { version = "0.7.0", path = "../metrics" }
tangram_model = { version = "0.7.0", path = "../model" }
tangram_progress_counter = { version = "0.7.0", path = "../progress_counter" }
tangram_table = { version = "0.7.0", path = "../table" }
tangram_text = { version = "0.7.0", path = "../text" }
tangram_tree = { version = "0.7.0", path = "../tree" }
tangram_zip = { version = "0.7.0", path = "../zip" }
time = { version = "0.3", features = ["formatting", "serde"] }

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["js"] }
