cargo-features = ["workspace-inheritance"]

[package]
name = "modelfox_core"

authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = true
repository = { workspace = true }
version = { workspace = true }

[lib]
path = "lib.rs"

[dependencies]
anyhow = { workspace = true }
bitvec = { workspace = true }
buffalo = { workspace = true }
chrono = { workspace = true }
csv = { workspace = true }
fast-float = { workspace = true }
fnv = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
ndarray = { workspace = true }
num = { workspace = true }
rand = { workspace = true }
rand_xoshiro = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
modelfox_features = { workspace = true }
modelfox_finite = { workspace = true }
modelfox_id = { workspace = true }
modelfox_kill_chip = { workspace = true }
modelfox_linear = { workspace = true }
modelfox_metrics = { workspace = true }
modelfox_model = { workspace = true }
modelfox_progress_counter = { workspace = true }
modelfox_table = { workspace = true }
modelfox_text = { workspace = true }
modelfox_tree = { workspace = true }
modelfox_zip = { workspace = true }

[target.wasm32-unknown-unknown.dependencies]
getrandom = { workspace = true }
