cargo-features = ["workspace-inheritance"]

[package]
name = "modelfox_dev"

authors = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = false
repository = { workspace = true }
version = { workspace = true }

[[bin]]
name = "modelfox_dev"
path = "main.rs"

[dependencies]
clap = { workspace = true }
sunfish = { workspace = true }
tokio = { workspace = true }
