[package]
authors = ["Tangram <root@tangram.dev"]
description = "Tangram makes it easy for programmers to train, deploy, and monitor machine learning models."
documentation = "https://docs.rs/tangram"
edition = "2018"
homepage = "https://github.com/tangramdotdev/tangram"
license = "MIT"
name = "tangram_features"
publish = true
repository = "https://github.com/tangramdotdev/tangram"
version = "0.6.0"

[lib]
path = "lib.rs"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
fnv = "1"
indexmap = { version = "1.6", features = ["serde-1"] }
itertools = "0.10"
ndarray = { version = "0.15", features = ["rayon"] }
num = "0.4"
serde = { version = "1", features = ["derive"] }
tangram_metrics = { version = "=0.6.0", path = "../metrics" }
tangram_table = { version = "=0.6.0", path = "../table" }
tangram_text = { version = "=0.6.0", path = "../text" }
tangram_zip = { version = "=0.6.0", path = "../zip" }
