[package]
authors = ["ModelFox <root@modelfox.dev"]
description = "ModelFox makes it easy for programmers to train, deploy, and monitor machine learning models."
documentation = "https://docs.rs/modelfox"
edition = "2021"
homepage = "https://github.com/modelfoxdotdev/modelfox"
license = "MIT"
name = "modelfox_features"
publish = true
repository = "https://github.com/modelfoxdotdev/modelfox"
version = "0.8.0"

[lib]
path = "lib.rs"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
fnv = "1"
indexmap = { version = "1.6", features = ["serde-1"] }
itertools = "0.10"
ndarray = { version = "0.15", features = ["rayon"] }
num = "0.4"
serde = { version = "1", features = ["derive"] }
modelfox_metrics = { version = "0.8.0", path = "../metrics" }
modelfox_table = { version = "0.8.0", path = "../table" }
modelfox_text = { version = "0.8.0", path = "../text" }
modelfox_zip = { version = "0.8.0", path = "../zip" }
