cargo-features = ["workspace-inheritance"]

[package]
name = "modelfox_features"

authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = true
repository = { workspace = true }
version = { workspace = true }

[lib]
path = "lib.rs"

[dependencies]
anyhow = { workspace = true }
fnv = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
ndarray = { workspace = true }
num = { workspace = true }
serde = { workspace = true }

modelfox_metrics = { workspace = true }
modelfox_table = { workspace = true }
modelfox_text = { workspace = true }
modelfox_zip = { workspace = true }
