[package]
authors = ["Tangram <root@tangram.dev"]
description = "Tangram makes it easy for programmers to train, deploy, and monitor machine learning models."
documentation = "https://docs.rs/tangram"
edition = "2021"
rust-version = "1.56"
homepage = "https://github.com/tangramdotdev/tangram"
license = "MIT"
name = "tangram_finite"
publish = true
repository = "https://github.com/tangramdotdev/tangram"
version = "0.7.0"

[lib]
path = "lib.rs"

[dependencies]
num = "0.4"
serde= { version = "1", features = ["derive"] }
