[package]
authors = ["ModelFox <root@modelfox.dev"]
description = "ModelFox makes it easy for programmers to train, deploy, and monitor machine learning models."
documentation = "https://docs.rs/modelfox"
edition = "2021"
homepage = "https://github.com/modelfoxdotdev/modelfox"
license = "MIT"
name = "modelfox_finite"
publish = true
repository = "https://github.com/modelfoxdotdev/modelfox"
version = "0.8.0"

[lib]
path = "lib.rs"

[dependencies]
num = "0.4"
serde= { version = "1", features = ["derive"] }
