cargo-features = ["workspace-inheritance"]

[package]
name = "modelfox_finite"

authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = true
repository = { workspace = true }
version = { workspace = true }

[lib]
path = "lib.rs"

[dependencies]
num = { workspace = true }
serde = { workspace = true }
