cargo-features = ["workspace-inheritance"]

[package]
name = "modelfox_id"

description = { workspace = true }
publish = true
authors = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lib]
path = "lib.rs"

[dependencies]
rand = { workspace = true }
serde = { workspace = true }
